# Pharmacy_Die_or_Die_FTL

./: .gitmodules  Makefile  README.md  compose.yml  package-lock.json
AdminFrontend/: index.html  package-lock.json  package.json
AdminFrontend/src/: API.ts  App.tsx  main.tsx
AdminFrontend/src/components/Drawer/: MainDrawer.tsx
AdminFrontend/src/pages/: pagesData.tsx  router.tsx
AdminFrontend/src/pages/AddItem/: AddItem.tsx
AdminFrontend/src/pages/Clients/: Clients.tsx
AdminFrontend/src/pages/DaysStatistic/: DaysStatistic.tsx
AdminFrontend/src/pages/Generation/: Generation.tsx
AdminFrontend/src/pages/InProgress/: InProgress.tsx
AdminFrontend/src/pages/InStock/: InStock.tsx
AdminFrontend/src/pages/SolveToday/: SolveToday.tsx
AdminFrontend/src/pages/TotalSolve/: TotalSolve.tsx
BackEnd/: CMakeLists.txt  DataBase.h  Dealer.h  Dockerfile  Drug.h  main.cpp
DataBase/: app.js  package-lock.json  package.json
GenModul/: CMakeLists.txt  Data.h  Dealer.h  Dockerfile  Drug.h  Drugs.txt  main.cpp
UserFrontend/: package-lock.json  package.json  vite.config.ts
UserFrontend/src/: App.tsx
